<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tm_dark">

        <TextView
            android:id="@+id/callout_label_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:gravity="end"
            android:labelFor="@id/callout_label"
            android:text="@string/callout_display_label"
            android:textColor="@color/tm_light"
            app:autoSizeMaxTextSize="@dimen/text_size"
            app:autoSizeMinTextSize="@dimen/min_text_size"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/callout_label"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/callout_label" />

        <EditText
            android:id="@+id/callout_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:layout_marginVertical="@dimen/callout_margin_xlarge"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/tm_light"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/callout_made_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:gravity="end"
            android:labelFor="@id/callout_label"
            android:text="@string/callout_made"
            android:textColor="@color/tm_light"
            app:autoSizeMaxTextSize="@dimen/text_size"
            app:autoSizeMinTextSize="@dimen/min_text_size"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/callout_made"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/callout_made" />

        <EditText
            android:id="@+id/callout_made"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/callout_margin"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:layout_marginVertical="@dimen/callout_margin_xlarge"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/tm_light"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/callout_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="160dp" />

        <Button
            android:id="@+id/color_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:gravity="center"
            android:lines="1"
            android:text="@string/color"
            app:autoSizeMaxTextSize="@dimen/text_size"
            app:autoSizeMinTextSize="@dimen/min_text_size"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/callout_image" />

        <Button
            android:id="@+id/image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:gravity="center"
            android:lines="1"
            android:text="@string/image_photo"
            app:autoSizeMaxTextSize="@dimen/text_size"
            app:autoSizeMinTextSize="@dimen/min_text_size"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_button" />

        <Button
            android:id="@+id/built_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:gravity="center"
            android:lines="1"
            android:text="@string/built_in"
            app:autoSizeMaxTextSize="@dimen/text_size"
            app:autoSizeMinTextSize="@dimen/min_text_size"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_button" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/callout_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/callout_margin"
            android:layout_marginVertical="@dimen/callout_margin_xlarge"
            android:background="@color/tm_primary"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/callout_made"
            app:layout_constraintWidth_max="256dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
